--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   tests:
-    name: {{ "${{ matrix.session }} ${{ matrix.python-version }} / ${{ matrix.os }}" }}
+    name:  "${{ matrix.session }} ${{ matrix.python-version }} / ${{ matrix.os }}" 
     runs-on: {{ "${{ matrix.os }}" }}
     strategy:
       fail-fast: false
@@ -29,16 +29,16 @@ jobs:
           - { python-version: 3.8, os: ubuntu-latest, session: "docs-build" }
 
     env:
-      NOXSESSION: {{ "${{ matrix.session }}" }}
+      NOXSESSION: "${{ matrix.session }}" 
 
     steps:
       - name: Check out the repository
         uses: actions/checkout@v2.3.4
 
-      - name: Set up Python {{ "${{ matrix.python-version }}" }}
+      - name: Set up Python "${{ matrix.python-version }}" 
         uses: actions/setup-python@v2.2.1
         with:
-          python-version: {{ "${{ matrix.python-version }}" }}
+          python-version: "${{ matrix.python-version }}"
 
       - name: Upgrade pip
         run: |
@@ -69,7 +69,7 @@ jobs:
         if: matrix.session == 'pre-commit'
         with:
           path: ~/.cache/pre-commit
-          key: {{ "${{ steps.pre-commit-cache.outputs.result }}-${{ hashFiles('.pre-commit-config.yaml') }}" }}
+          key: "${{ steps.pre-commit-cache.outputs.result }}-${{ hashFiles('.pre-commit-config.yaml') }}" 
           restore-keys: |
             {{ "${{ steps.pre-commit-cache.outputs.result }}-" }}
       - name: Run Nox
