--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,8 +53,8 @@ jobs:
           pip install --constraint=.github/workflows/constraints.txt nox nox-poetry
           nox --version
       - name: Compute pre-commit cache key
-        if: matrix.session == 'pre-commit'
-        id: pre-commit-cache
+        if: matrix.os != 'windows-latest'
+        id: cache_key
         shell: python
         run: |
           import hashlib
@@ -62,7 +62,7 @@ jobs:
           python = "py{}.{}".format(*sys.version_info[:2])
           payload = sys.version.encode() + sys.executable.encode()
           digest = hashlib.sha256(payload).hexdigest()
-          result = '"${{ runner.os }}-{}-{}-pre-commit".format(python, digest[:8])' 
+          result = "${{ runner.os }}-{}-{}-pre-commit".format(python, digest)
           print("::set-output name=result::{}".format(result))
       - name: Restore pre-commit cache
         uses: actions/cache@v2.1.4
