--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1.4.2
         with:
           user: __token__
-          password: "${{ secrets.TEST_PYPI_TOKEN }}"
+          password: "${{ secrets.PYPI_TOKEN }}"
           repository_url: https://test.pypi.org/legacy/
 
       - name: Publish the release notes
