--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,12 @@
-# This file is for unifying the coding style for different editors and IDEs.
-# More information at http://EditorConfig.org
+# EditorConfig is awesome: https://EditorConfig.org
 
 # top-most EditorConfig file
 root = true
 
 # Unix-style newlines with a newline ending every file
+# ------------------
+# Source code
+# ------------------
 [*]
 end_of_line = lf
 indent_style = space
@@ -35,7 +37,8 @@ indent_style = space
 indent_style = tab
 indent_size = 4
 
-# 4 space indentation
+# Matches multiple files with brace expansion notation
+# Set default charset
 [*.py]
 indent_size = 4
 max_line_length = 80
