--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,52 +6,55 @@ on:
 
 jobs:
   tests:
-    name:  "${{ matrix.session }} ${{ matrix.python-version }} / ${{ matrix.os }}" 
-    runs-on: "${{ matrix.os }}"
+    name: '${{ matrix.session }} ${{ matrix.python-version }} / ${{ matrix.os }}'
+    runs-on: '${{ matrix.os }}'
     strategy:
       fail-fast: false
       matrix:
         include:
-          - { python-version: 3.9, os: ubuntu-latest, session: "pre-commit" }
-          - { python-version: 3.9, os: ubuntu-latest, session: "safety" }
-          - { python-version: 3.9, os: ubuntu-latest, session: "mypy" }
-          - { python-version: 3.8, os: ubuntu-latest, session: "mypy" }
-          - { python-version: 3.7, os: ubuntu-latest, session: "mypy" }
-          - { python-version: 3.6, os: ubuntu-latest, session: "mypy" }
-          - { python-version: 3.9, os: ubuntu-latest, session: "tests" }
-          - { python-version: 3.8, os: ubuntu-latest, session: "tests" }
-          - { python-version: 3.7, os: ubuntu-latest, session: "tests" }
-          - { python-version: 3.6, os: ubuntu-latest, session: "tests" }
-          - { python-version: 3.9, os: windows-latest, session: "tests" }
-          - { python-version: 3.9, os: macos-latest, session: "tests" }
-          - { python-version: 3.9, os: ubuntu-latest, session: "typeguard" }
-          - { python-version: 3.9, os: ubuntu-latest, session: "xdoctest" }
-          - { python-version: 3.8, os: ubuntu-latest, session: "docs-build" }
+          - { python-version: 3.9, os: ubuntu-latest, session: 'pre-commit' }
+          - { python-version: 3.9, os: ubuntu-latest, session: 'safety' }
+          - { python-version: 3.9, os: ubuntu-latest, session: 'mypy' }
+          - { python-version: 3.8, os: ubuntu-latest, session: 'mypy' }
+          - { python-version: 3.7, os: ubuntu-latest, session: 'mypy' }
+          - { python-version: 3.6, os: ubuntu-latest, session: 'mypy' }
+          - { python-version: 3.9, os: ubuntu-latest, session: 'tests' }
+          - { python-version: 3.8, os: ubuntu-latest, session: 'tests' }
+          - { python-version: 3.7, os: ubuntu-latest, session: 'tests' }
+          - { python-version: 3.6, os: ubuntu-latest, session: 'tests' }
+          - { python-version: 3.9, os: windows-latest, session: 'tests' }
+          - { python-version: 3.9, os: macos-latest, session: 'tests' }
+          - { python-version: 3.9, os: ubuntu-latest, session: 'typeguard' }
+          - { python-version: 3.9, os: ubuntu-latest, session: 'xdoctest' }
+          - { python-version: 3.8, os: ubuntu-latest, session: 'docs-build' }
 
     env:
-      NOXSESSION: "${{ matrix.session }}" 
+      NOXSESSION: '${{ matrix.session }}'
 
     steps:
       - name: Check out the repository
         uses: actions/checkout@v2.3.4
 
-      - name: Set up Python "${{ matrix.python-version }}" 
+      - name: Set up Python "${{ matrix.python-version }}"
         uses: actions/setup-python@v2.2.2
         with:
-          python-version: "${{ matrix.python-version }}"
+          python-version: '${{ matrix.python-version }}'
 
       - name: Upgrade pip
         run: |
           pip install --constraint=.github/workflows/constraints.txt pip
           pip --version
+
       - name: Install Poetry
         run: |
           pip install --constraint=.github/workflows/constraints.txt poetry
           poetry --version
+
       - name: Install Nox
         run: |
           pip install --constraint=.github/workflows/constraints.txt nox nox-poetry
           nox --version
+
       - name: Compute pre-commit cache key
         if: matrix.os != 'windows-latest'
         id: cache_key
@@ -64,23 +67,25 @@ jobs:
           digest = hashlib.sha256(payload).hexdigest()
           result = "${{ runner.os }}-{}-{}-pre-commit".format(python, digest)
           print("::set-output name=result::{}".format(result))
+
       - name: Restore pre-commit cache
         uses: actions/cache@v2.1.6
         if: matrix.session == 'pre-commit'
         with:
           path: ~/.cache/pre-commit
-          key: "${{ steps.pre-commit-cache.outputs.result }}-${{ hashFiles('.pre-commit-config.yaml') }}" 
+          key: "${{ steps.pre-commit-cache.outputs.result }}-${{ hashFiles('.pre-commit-config.yaml') }}"
           restore-keys: |
-            "${{ steps.pre-commit-cache.outputs.result }}-" 
+            "${{ steps.pre-commit-cache.outputs.result }}-"
+
       - name: Run Nox
         run: |
           nox --force-color --python="${{ matrix.python-version }}"
       - name: Upload coverage data
         if: always() && matrix.session == 'tests'
-        uses: "actions/upload-artifact@v2.2.4"
+        uses: 'actions/upload-artifact@v2.2.4'
         with:
           name: coverage-data
-          path: ".coverage.*"
+          path: '.coverage.*'
 
       - name: Upload documentation
         if: matrix.session == 'docs-build'
