--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,7 +1,7 @@
 name: Auto-merge minor/patch
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: '0 * * * *'
 jobs:
   test:
     name: Auto-merge minor and patch updates
