Update  gh-actions

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,64 +1,54 @@
-# EditorConfig is awesome: https://EditorConfig.org
+# EditorConfig helps developers define and maintain consistent
+# coding styles between different editors and IDEs
+# editorconfig.org
 
-# top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
-# ------------------
-# Source code
-# ------------------
 [*]
-end_of_line = lf
+# Change these settings to your own preference
 indent_style = space
 indent_size = 4
+
+# We recommend you to keep these unchanged
+end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-# Indentation override for all JS under lib directory
-[*.{js,json,vue,scss,rb,haml,yml,yaml,toml}]
+# The indent size used in the `package.json` file cannot be changed
+# https://github.com/npm/npm/pull/3180#issuecomment-16336516
+[{*.yml,*.yaml,package.json}]
+indent_style = space
 indent_size = 2
 
-[*.{js,json,vue,scss,rb,haml,yml,md}]
+# Makefiles
+[Makefile, *.mk]
+indent_style = tab
+indent_size = 4
+trim_trailing_whitespace = false
+
+[{CMakeLists.txt,*.cmake}]
 indent_style = space
-charset = utf-8
+indent_size = 4
+tab_width = 4
 
 # Source code files
 [*.{c,cxx,cpp,h,hxx,hpp,java,m,mm,py,swift,xsl}]
 indent_style = space
-indent_size = 2
-
-[CMakeLists.txt,*.cmake{,.in}]
-indent_size = 2
-indent_style = space
-
-# Override for Makefile
-[{Makefile, makefile, GNUmakefile}]
-indent_style = tab
 indent_size = 4
+tab_width = 4
 
-# Matches multiple files with brace expansion notation
-# Set default charset
-[*.py]
-indent_size = 4
-max_line_length = 80
-
-[*.rst]
-indent_size = 3
-
-[*.coffee]
-indent_style = space
-indent_size = 4
-
-[*.html]
-indent_style = space
-indent_size = 2
-
-[*.{bat,cmd}]
-end_of_line = crlf
-
-[*.{md,markdown,js.snap}]
+[*.{md,markdown}]
+indent_size = 1
+max_line_length = 128
 trim_trailing_whitespace = false
 
-[LICENSE]
-insert_final_newline = false
+[*.{sh,msx}]
+indent_size = 2
+indent_style = space
+max_line_length = 160
+
+[*.{yml,yaml}]
+indent_size = 2
+indent_style = space
+max_line_length = 160
