--- a/.github/automerge.yml
+++ b/.github/automerge.yml
@@ -1,3 +1,8 @@
+---
+- match:
+    dependency_name: aws-sdk
+    update_type: semver:minor
+
 - match:
     dependency_type: development
     update_type: semver:minor # includes patch updates!
