--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,38 +1,71 @@
+---
 # To get started with Dependabot version updates, you'll need to specify which
 # package ecosystems to update and where the package manifests are located.
 # Please see the documentation for all configuration options:
-# https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
+# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
 version: 2
 updates:
-  # Maintain dependencies for GitHub Actions
-  - package-ecosystem: 'github-actions'
-    directory: '/'
-    schedule:
-      interval: 'weekly'
-
-  # Maintain dependencies for pip
-  - package-ecosystem: 'pip' # See documentation for possible values
-    directory: '/.github/workflows' # Location of package manifests
-    schedule:
-      interval: 'weekly'
-
-  # Maintain dependencies for pip
-  - package-ecosystem: 'pip' # See documentation for possible values
-    directory: '/docs' # Location of package manifests
-    schedule:
-      interval: 'weekly'
-
-  # Maintain dependencies for pip
-  - package-ecosystem: 'pip' # See documentation for possible values
+  - package-ecosystem: 'github-actions' # See documentation for possible values
     directory: '/' # Location of package manifests
     schedule:
       interval: 'weekly'
+      day: 'friday'
+    commit-message:
+      prefix: ':rocket: gha'
 
-  # Enable version updates for Docker
-  - package-ecosystem: 'docker'
-    # Look for a `Dockerfile` in the `root` directory
-    directory: '/'
-    # Check for updates once a week
+  - package-ecosystem: 'docker' # See documentation for possible values
+    directory: '/' # Location of package manifests
     schedule:
       interval: 'weekly'
+      day: 'friday'
+    commit-message:
+      prefix: ':rocket: docker'
+
+  - package-ecosystem: 'bundler' # See documentation for possible values
+    directory: '/' # Location of package manifests
+    schedule:
+      interval: 'weekly'
+      day: 'friday'
+    commit-message:
+      prefix: ':rocket: bundler'
+
+  - package-ecosystem: 'npm' # See documentation for possible values
+    directory: '/' # Location of package manifests
+    schedule:
+      interval: 'weekly'
+      day: 'friday'
+    commit-message:
+      prefix: ':rocket: npm'
+
+  - package-ecosystem: 'pip' # See documentation for possible values
+    directory: '/**' # Location of package manifests
+    schedule:
+      interval: 'weekly'
+      day: 'friday'
+    commit-message:
+      prefix: ':rocket: pip'
+
+  - package-ecosystem: 'pipenv' # See documentation for possible values
+    directory: '/' # Location of package manifests
+    schedule:
+      interval: 'weekly'
+      day: 'friday'
+    commit-message:
+      prefix: ':rocket: pipenv'
+
+  - package-ecosystem: 'poetry' # See documentation for possible values
+    directory: '/' # Location of package manifests
+    schedule:
+      interval: 'weekly'
+      day: 'friday'
+    commit-message:
+      prefix: ':rocket: poetry'
+
+  - package-ecosystem: 'yarn' # See documentation for possible values
+    directory: '/' # Location of package manifests
+    schedule:
+      interval: 'weekly'
+      day: 'friday'
+    commit-message:
+      prefix: ':rocket: yarn'
