--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,17 @@
 /resources/translations/*.*
 /recipe/meta.yml
+
+# ignore stylesheets for now as this clashes with our linter
+*.css
+*.scss
+*.ts
+*.ui
+
+out
+image
+dist
+bin
+.vscode-test
+
+Pipfile.lock
+poetry.lock
