--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -59,6 +59,7 @@ jobs:
             # mandatory
             -Dsonar.projectKey=jmuelbert_jmbde-python
             -Dsonar.organization=jmuelbert
+            -Dsonar.sourceEncoding=UTF-8
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # When you need the analysis to take place in a directory other than the one from which it was launched
