--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ classifiers=[
         "Programming Language :: Python :: 3.8",
         "Programming Language :: Python :: 3.9",
         "Programming Language :: Python :: 3.10",
+        "Programming Language :: Python :: 3.11",
         "Topic :: Office/Business",
 ]
 
@@ -39,13 +40,13 @@ classifiers=[
 Changelog = "https://github.com/jmuelbert/jmbde-python/releases"
 
 [tool.poetry.dependencies]
-python = ">=3.6.5, <3.11"
+python = ">=3.7, <3.12"
 click = "^8.0.4"
 PySide6 = "^6.4"
 
 
 [tool.poetry.dev-dependencies]
-coverage = {extras = ["toml"], version = "^6.2"}
+coverage = {extras = ["toml"], version = "^6.4"}
 pytest = "^7.0.1"
 safety = "^2.3.5"
 mypy = "^0.971"
