--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
         language: system
         types: [python]
         require_serial: true
-        exclude = '''
+        exclude:
         /(
           \.git
           | \.mypy_chache
@@ -27,7 +27,7 @@ repos:
           | src/gui/forms
           | src/gui/resources_rc.py
         )/
-        '''
+        
       - id: check-added-large-files
         name: Check for added large files
         entry: check-added-large-files
