--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
         language: system
         types: [python]
         require_serial: true
-        exclude:
+        exclude: |
         /(
           \.git
           | \.mypy_chache
