--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,14 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Set up Python
+      - name: "⚙️ Install Python"
+        id: python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          # Read python version from a file .python-version
+          # python-version-file: ".python-version"
+          check-latest: true
+          cache: pip
 
       - name: Upgrade pip
         run: |
@@ -98,11 +102,19 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3
+        
+      - name: "🐧 ⚙️ Install Linux dependencies"
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update && DEBIAN_FRONTEND=--noninteractive \
+          sudo apt-get --no-install-recommends --assume-yes install \
+            libgl1-mesa-glx
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: pip
 
       - name: Upgrade pip
         run: |
