--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,11 +104,10 @@ jobs:
         uses: actions/checkout@v3
         
       - name: "🐧 ⚙️ Install Linux dependencies"
-        if: runner.os == 'Linux'
         run: |
           sudo apt-get update && DEBIAN_FRONTEND=--noninteractive \
           sudo apt-get --no-install-recommends --assume-yes install \
-            libgl1-mesa-glx
+            libegl1
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
@@ -177,6 +176,12 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v3
 
+      - name: "🐧 ⚙️ Install Linux dependencies"
+        run: |
+          sudo apt-get update && DEBIAN_FRONTEND=--noninteractive \
+          sudo apt-get --no-install-recommends --assume-yes install \
+            libegl1
+            
       - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
