--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,6 +104,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: "🐧 ⚙️ Install Linux dependencies"
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get update && DEBIAN_FRONTEND=--noninteractive \
           sudo apt-get --no-install-recommends --assume-yes install \
