--- a/.github/workflows/codacy-analysis.yml
+++ b/.github/workflows/codacy-analysis.yml
@@ -11,12 +11,12 @@ name: Codacy Security Scan
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [master]
+    branches: [main]
   schedule:
-    - cron: '34 11 * * 4'
+    - cron: "34 11 * * 4"
 
 jobs:
   codacy-security-scan:
