--- a/.github/workflows/reuse-check.yml
+++ b/.github/workflows/reuse-check.yml
@@ -12,10 +12,10 @@ on:
   pull_request:
 
 jobs:
-  test:
+  reuse-test:
     runs-on: ubuntu-latest
     steps:
-      - name: '🧰 Checkout'
+      - name: "🧰 Checkout"
         uses: actions/checkout@v3
         with:
           # Full git history is needed to get a proper list of changed files within `super-linter`
