--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,4 +1,3 @@
----
 # Labels names are important as they are used by Release Drafter to decide
 # regarding where to record them in changelog or if to skip them.
 #
@@ -29,7 +28,7 @@
   description: New feature or request
   color: a2eeef
 - name: github_actions
-  description: Pull requests that update Github_actions code
+  description: Pull requests that update GitHub_actions code
   color: "000000"
 - name: good first issue
   description: Good for newcomers
