--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,29 +1,30 @@
----
 # Configuration file for MegaLinter
-# See all available variables at https://oxsecurity.github.io/megalinter/configuration/ and in linters documentation
-
+# See all available variables at
+# https://oxsecurity.github.io/megalinter/configuration/ and in linters documentation
 APPLY_FIXES: all # all, none, or list of linter keys
-# ENABLE: # If you use ENABLE variable, all other languages/formats/tooling-formats will be disabled by default
-# ENABLE_LINTERS: # If you use ENABLE_LINTERS variable, all other linters will be disabled by default
+# ENABLE: # If you use ENABLE variable, all other
+# languages/formats/tooling-formats will be disabled by default
+# ENABLE_LINTERS: # If you use ENABLE_LINTERS variable, all
+# other linters will be disabled by default
 DISABLE:
-  # - CLOUDFORMATION
-  # - COPYPASTE # Uncomment to disable checks of excessive copy-pastes
-  # - CSS
-  # - EDITORCONFIG
-  # - SPELL # Uncomment to disable checks of spelling mistakes
-  # - JAVASCRIPT
-  # - TEKTON
+# - CLOUDFORMATION
+# - COPYPASTE # Uncomment to disable checks of excessive copy-pastes
+# - CSS
+# - EDITORCONFIG
+# - SPELL # Uncomment to disable checks of spelling mistakes
+# - JAVASCRIPT
+# - TEKTON
 DISABLE_LINTERS:
-  # - JSON_PRETTIER
-  # - REPOSITORY_GITLEAKS
-  # - SPELL_PROSELINT
-  # - C_CPPLINT
-  # - CPP_CPPLINT
+# - JSON_PRETTIER
+# - REPOSITORY_GITLEAKS
+# - SPELL_PROSELINT
+# - C_CPPLINT
+# - CPP_CPPLINT
 DISABLE_ERRORS_LINTERS:
-  # - PYTHON_BANDIT
-  # - PYTHON_PYRIGHT
-  # - REPOSITORY_DEVSKIM
-  # - REPOSITORY_SEMGREP
+# - PYTHON_BANDIT
+# - PYTHON_PYRIGHT
+# - REPOSITORY_DEVSKIM
+# - REPOSITORY_SEMGREP
 PRINT_ALL_FILES: false
 # FILTER_REGEX_EXCLUDE: '(\.automation/test|\.automation/generated|\.github/workflows|docs/javascripts|docs/overrides|docs/json-schemas|flavors|clj-kondo|TEMPLATES)'
 # JSON_JSONLINT_FILTER_REGEX_EXCLUDE: '(\.vscode/)'
