--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -7,19 +7,19 @@ APPLY_FIXES: all # all, none, or list of linter keys
 # ENABLE_LINTERS: # If you use ENABLE_LINTERS variable, all
 # other linters will be disabled by default
 DISABLE:
-# - CLOUDFORMATION
-# - COPYPASTE # Uncomment to disable checks of excessive copy-pastes
-# - CSS
-# - EDITORCONFIG
+  # - CLOUDFORMATION
+  # - COPYPASTE # Uncomment to disable checks of excessive copy-pastes
+  # - CSS
+  - EDITORCONFIG
 # - SPELL # Uncomment to disable checks of spelling mistakes
 # - JAVASCRIPT
 # - TEKTON
 DISABLE_LINTERS:
-# - JSON_PRETTIER
-# - REPOSITORY_GITLEAKS
-# - SPELL_PROSELINT
-# - C_CPPLINT
-# - CPP_CPPLINT
+  # - JSON_PRETTIER
+  # - REPOSITORY_GITLEAKS
+  # - SPELL_PROSELINT
+  - C_CPPLINT
+  - CPP_CPPLINT
 DISABLE_ERRORS_LINTERS:
 # - PYTHON_BANDIT
 # - PYTHON_PYRIGHT
@@ -33,10 +33,10 @@ PRINT_ALL_FILES: false
 # YAML_V8R_FILTER_REGEX_EXCLUDE: '(descriptors|templates/\.mega-linter\.yml|\.codecov\.yml)'
 # YAML_V8R_FILTER_REGEX_EXCLUDE: '(.gitlab-ci.yml|\.mega-linter\.yml)'
 # BASH_FILTER_REGEX_EXCLUDE: '(lib)'
-# MARKDOWN_FILTER_REGEX_EXCLUDE: '(license\.md)'
+MARKDOWN_FILTER_REGEX_EXCLUDE: '(license\.md)'
 # MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 # COPYPASTE_FILTER_REGEX_EXCLUDE: '(LICENSES/CC0-1.0\.txt|CHANGELOG\.md)'
-# SPELL_MISSPELL_FILTER_REGEX_EXCLUDE: '(\.automation/generated|docs/descriptors)'
+SPELL_MISSPELL_FILTER_REGEX_EXCLUDE: '(\.automation/generated|docs/descriptors)'
 # TYPESCRIPT_FILTER_REGEX_EXCLUDE: '(src/apps/translations)'
 # DOCKERFILE_HADOLINT_ARGUMENTS: '--ignore DL3003 --ignore DL3007 --ignore DL3013 --ignore DL3016 --ignore DL3018 --ignore DL3028 --ignore DL3059 --ignore DL4001 --ignore DL4006 --ignore SC2015 --ignore SC2016 --ignore SC2039 --ignore SC2086 --ignore SC1091 --ignore SC3046'
 REPOSITORY_TRIVY_ARGUMENTS:
