--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ click8 = "^8.0.1"
 [tool.poetry.group.dev.dependencies]
 Pygments = ">=2.10.0"
 black = ">=21.10b0"
+types-click = ">=7.1.8"
 coverage = {extras = ["toml"], version = ">=6.2"}
 darglint = ">=1.8.1"
 flake8 = ">=4.0.1"
