--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,11 @@ packages = [{include = "jmbde", from = "src"}, ]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-click8 = "^8.0.1"
+click = "^8.1.3"
 
 [tool.poetry.group.dev.dependencies]
 Pygments = ">=2.10.0"
 black = ">=21.10b0"
-types-click = ">=7.1.8"
 coverage = {extras = ["toml"], version = ">=6.2"}
 darglint = ">=1.8.1"
 flake8 = ">=4.0.1"
