feat: Upgrade to the new hyper modern py version

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,37 +6,66 @@
 
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
-    directory: "."
+  - package-ecosystem: "github-actions" # See documentation for possible values
+    directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "friday"
     commit-message:
       prefix: ":rocket: gha"
 
-  - package-ecosystem: "docker"
-    directory: "/"
+  - package-ecosystem: "docker" # See documentation for possible values
+    directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "friday"
     commit-message:
       prefix: ":rocket: docker"
 
-  - package-ecosystem: "bundler"
-    directory: "/"
+  - package-ecosystem: "bundler" # See documentation for possible values
+    directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "friday"
     commit-message:
       prefix: ":rocket: bundler"
 
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: "npm" # See documentation for possible values
+    directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "friday"
     commit-message:
       prefix: ":rocket: npm"
 
-  - package-ecosystem: "pip"
-    directory: "/"
+  - package-ecosystem: "pip" # See documentation for possible values
+    directory: "/**" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "friday"
     commit-message:
       prefix: ":rocket: pip"
+
+  - package-ecosystem: "pipenv" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: "weekly"
+      day: "friday"
+    commit-message:
+      prefix: ":rocket: pipenv"
+
+  - package-ecosystem: "poetry" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: "weekly"
+      day: "friday"
+    commit-message:
+      prefix: ":rocket: poetry"
+
+  - package-ecosystem: "yarn" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: "weekly"
+      day: "friday"
+    commit-message:
+      prefix: ":rocket: yarn"
