--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,4 +1,3 @@
----
 # Labels names are important as they are used by Release Drafter to decide
 # regarding where to record them in changelog or if to skip them.
 #
@@ -29,8 +28,8 @@
   description: New feature or request
   color: a2eeef
 - name: github_actions
-  description: Pull requests that update Github_actions code
-  color: '000000'
+  description: Pull requests that update GitHub_actions code
+  color: "000000"
 - name: good first issue
   description: Good for newcomers
   color: 7057ff
@@ -42,7 +41,7 @@
   color: e4e669
 - name: performance
   description: Performance
-  color: '016175'
+  color: "016175"
 - name: python
   description: Pull requests that update Python code
   color: 2b67c6
