--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,12 @@ name: Build
 on:
   push:
     branches:
-      - main
+      - Tkinter
     tags:
-      - "[0-9]+.[0-9]+.[0-9]+"
+      - "*"
   pull_request:
     branches:
-      - main
+      - Tkinter
 
 jobs:
   build:
@@ -83,13 +83,9 @@ jobs:
           - { python-version: "3.11", os: ubuntu-latest, session: "mypy" }
           - { python-version: "3.10", os: ubuntu-latest, session: "mypy" }
           - { python-version: "3.9", os: ubuntu-latest, session: "mypy" }
-          - { python-version: "3.8", os: ubuntu-latest, session: "mypy" }
-          - { python-version: "3.7", os: ubuntu-latest, session: "mypy" }
           - { python-version: "3.11", os: ubuntu-latest, session: "tests" }
           - { python-version: "3.10", os: ubuntu-latest, session: "tests" }
           - { python-version: "3.9", os: ubuntu-latest, session: "tests" }
-          - { python-version: "3.8", os: ubuntu-latest, session: "tests" }
-          - { python-version: "3.7", os: ubuntu-latest, session: "tests" }
           - { python-version: "3.11", os: windows-latest, session: "tests" }
           - { python-version: "3.11", os: macos-latest, session: "tests" }
           - { python-version: "3.11", os: ubuntu-latest, session: "typeguard" }
@@ -223,6 +219,20 @@ jobs:
       - name: Upload coverage report
         uses: codecov/codecov-action@v3.1.1
 
+  releaseNotes:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Build Releasenotes
+        id: github_releasenotes
+        uses: release-drafter/release-drafter@v5.22.0
+        with:
+          publish: "${{ steps.check-version.outputs.tag != '' }}"
+          tag: "${{ steps.check-version.outputs.tag }}"
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
   changeLog:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
@@ -244,7 +254,7 @@ jobs:
 
   deployPrereleases:
     name: Deploy Pre-Release
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-20.04
     environment: PreRelease
     needs:
@@ -252,7 +262,7 @@ jobs:
       - tests
     steps:
       - name: Restore Build Python Module
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v2
         with:
           name: PythonModule
           path: dist/
