--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,10 +14,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [main]
+    branches: [Tkinter]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [main]
+    branches: [Tkinter]
   schedule:
     - cron: "40 20 * * 5"
 
