--- a/.github/workflows/write-good.yml
+++ b/.github/workflows/write-good.yml
@@ -4,10 +4,10 @@ name: "Write good"
 on:
   push:
     branches:
-      - main
+      - Tkinter
   pull_request:
     branches:
-      - main
+      - Tkinter
 
 jobs:
   write_good_job:
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: write-good action step
         id: write-good
-        uses: tomwhross/write-good-action@v1.6
+        uses: tomwhross/write-good-action@v1.5
       # Use the output from the `write-good` step
       - name: Get the write-good output
         run: echo "${{ steps.write-good.outputs.result }}"
