--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "cSpell.words": [
-        "jmbde-python"
+        "jmbde",
+        "jmbde-python",
+        "Mülbert"
     ],
+    "python.formatting.provider": "black",
+    "sonarlint.connectedMode.project": {
+        "connectionId": "jmuelbert",
+        "projectKey": "jmuelbert_jmbde-python"
+    }
 }
