--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -2,158 +2,88 @@
 version: '0.2'
 files:
   - '**/*'
-dictionaryDefinitions:
-  - name: cmake-refined
-    path: ./config/cmake-refined-words.txt
-    addWords: false
-  - name: qt
-    path: ./config/qt-words.txt
-    addWords: false
-  - name: linux-package
-    path: ./config/linux-package-words.txt
-    addWords: false
-  - name: taskfile
-    path: ./config/taskfile-words.txt
-    addWords: false
 dictionaries:
-  - qt
-  - taskfile
   - bash
-  - cmake-refined
-  - cpp-refined
   - docker
-  - linux-package
-  - python-common
+  - dict-python
 ignorePaths:
   - s**/node_modules/**
   - '**/vscode-extension/**'
   - '**/.git/**'
   - '.github/actions/**'
   - '.github/workflows/**'
-  - 'cmake/modules/**'
   - 'docs/api-docs/**'
   - 'cspell.config.yaml'
-  - '.clang-tidy'
-  - '.cmake-format.yaml'
-  - '.cmake-lint.yaml'
   - '.codespell.rc'
   - '*.gz'
   - '*.lock'
   - '*.svg'
-  - .gitignore
-  - .devcontainer/.dockerignore
-  - .vscode
-  - megalinter
-  - package-lock.json
-  - report
-  - pnpm-lock.yaml
-  - dist/**
-  - build/**
-  - out/**
-  - /project-words.txt
-  - ./qt-words.txt
-  - ./taskfile-words.txt
-  - ./cmake-refined-words.txt
-  - ./linux-package-words.txt
+  - '.gitignore'
+  - '.devcontainer/.dockerignore'
+  - '.vscode'
+  - 'megalinter'
+  - 'package-lock.json'
+  - 'report'
+  - 'npm-lock.yaml'
+  - 'dist/**'
+  - 'build/**'
+  - 'out/**'
 useGitignore: true
 language: en, en-GB, de, de-DE
 allowCompoundWords: true
 enableGlobDot: true
 words:
-  - aqtinstall
-  - APPL
-  - ARGN
-  - cbproj
-  - ccache
-  - ccmake
-  - clangd
-  - cmakelang
-  - Codacy
-  - codecov
-  - cppcheck
-  - cppstd
-  - cpptools
-  - cschlosser.doxdocgen
-  - Devel
-  - DCOMPONENT
-  - DOPTION*
-  - DPROJECT
-  - eamodio
-  - fasterer
-  - FILEOS
-  - fips
-  - ftest
-  - fprofile
+  - ahmadnassri
+  - Akismet
+  - aarch
+  - asdict
+  - Authentiq
+  - cjolowicz
+  - [Cc]odecov
+  - cython
+  - envrc
   - furo
-  - Fuzzer
-  - Gcov
-  - giticket
-  - groupproj
-  - gtest
-  - hmarr
-  - hwrap
-  - icns
-  - IHELP
-  - IOPTIONS
-  - IQUIT
-  - IWYU
-  - jamf
-  - jinja
+  - Gitaly
+  - GPLV
+  - HADOLINT
+  - idiv
+  - itertools 
+  - ipynb
+  - isort
+  - jmbde
   - jmuelbert
-  - juergen
-  - kwarg
-  - kwargs
-  - LCOV
-  - libcxx
-  - libfmt
-  - libgmp
-  - libmpfr
-  - libspdlog
-  - lstrip
-  - muelbert
+  - jquery
+  - Kantive
+  - kondo
+  - mkdocs
   - Mülbert
-  - munki
-  - munkiadmin
-  - munkipkg
-  - myclass
-  - noqa
-  - oclint
-  - parg
-  - pargs
-  - Pavlik
-  - Pboard
-  - plists
-  - pipenv
-  - pkgsinfo
-  - PTRACE
-  - pthread
-  - pthreads
-  - pylance
-  - pyyaml
-  - qtconanboilerplate
-  - qtwidgettest
-  - REDIST
-  - SAST
-  - sectnums
-  - socat
-  - sonarqube
-  - spdlog
-  - svgz
-  - SYSREQUIRES
-  - rubocop
-  - twxs
-  - uncrustify
+  - msvs
+  - mymodule
+  - MSYS
+  - mypackage
+  - mypy
+  - noxfile
+  - nojekyll
+  - paren
+  - pautodoc
+  - pycache
+  - pygtk
+  - PyLint
+  - pylint
+  - PYPI
+  - PYRIGHT
+  - pytest
+  - pyupgrade
+  - rdiv  
+  - rgxs
+  - runit
+  - Sidekiq
+  - Signup
+  - TEKTON
+  - tkinter  
+  - TRIVY
   - venv
-  - VRAC
-  - webp
-  - Wextra
-  - Wignored
-  - winver
-  - Wmaybe
-  - Wmissing
-  - Wpedantic
-  - Wreorder
-  - Wreturn
-  - Wuninitialized
-  - Wunused
-  - xcodeproj
+  - VIRTUALENVS
+  - xdoctest
+  - xrange
+  - xreadlines  
