--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,91 +1,72 @@
-# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject
+# SPDX-FileCopyRightText: 2023 Jürgen Mülbert <juergen.muelbert@web.de>
+#
+# SPDX-License-Identifier: EUPL-1.2
+#
+# Python configuration file for building, dependencies, and tooling.
+#
+# For more information, visit
+# https://snarky.ca/what-the-heck-is-pyproject-toml/.
 
 [tool.poetry]
-name = "jmbde"
-version = "0.2.2"
-description = "A BDE tool"
-authors = ["Jürgen Mülbert <juergen.muelbert@gmail.com>"]
-license = "GPL-3.0"
-readme = "README.rst"
-homepage = "https://github.com/jmuelbert/jmbde-python"
-repository = "https://github.com/jmuelbert/jmbde-python"
-documentation = "https://jmbde-python.readthedocs.io"
-packages = [
-    { include = "jmbde", from = "src" }
-]
+name = "jmbde-python"
+version = "0.1.0"
+description = "A bde written with python an tkinter"
+authors = ["Jürgen Mülbert <juergen.muelbert@web.de>"]
+documentation = "http://github.com/jmuelbert//jmbde-python"
+keywords = ["jmbde_python", "tkinter", "python3", "poetry"]
+license = "EUPL-1.2"
+readme = "README.md"
 
-# Keywords description https://python-poetry.org/docs/pyproject/#keywords
-keywords = ["jmbde", "jmbde-python", "business", "BDE", "datebase" ]
-
-# Pypi classifiers: https://pypi.org/classifiers/
-classifiers=[
-  "Development Status :: 4 - Beta",
-  "Environment :: Console",
-  "Intended Audience :: Developers",
-  "Intended Audience :: End Users/Desktop",
-  "License :: OSI Approved :: GNU Public License 3.0 (GPL-3.0)",
-        "Natural Language :: English",
-        "Operating System :: OS Independent",
-        "Programming Language :: Python",
-        "Programming Language :: Python :: 3",
-        "Programming Language :: Python :: 3.7",
-        "Programming Language :: Python :: 3.8",
-        "Programming Language :: Python :: 3.9",
-        "Programming Language :: Python :: 3.10",
-        "Programming Language :: Python :: 3.11",
-        "Topic :: Office/Business",
-]
-
-[tool.poetry.urls]
-Changelog = "https://github.com/jmuelbert/jmbde-python/releases"
+packages = [{include = "jmbde", from = "src"}, ]
 
 [tool.poetry.dependencies]
-python = ">=3.7, <3.12"
-click = "^8.0.4"
-PySide6 = "^6.4"
+python = "^3.9"
+click = "^8.1.3"
 
-
-[tool.poetry.dev-dependencies]
-coverage = {extras = ["toml"], version = "^7.2"}
+[tool.poetry.group.dev.dependencies]
+Pygments = ">=2.10.0"
+black = ">=21.10b0"
+coverage = {extras = ["toml"], version = ">=6.2"}
+darglint = ">=1.8.1"
+flake8 = ">=4.0.1"
+flake8-bandit = ">=2.1.2"
+flake8-bugbear = ">=21.9.2"
+flake8-docstrings = ">=1.6.0"
+flake8-rst-docstrings = ">=0.2.5"
+furo = "^2022.12.7"
+isort = "^5.12.0"
+mypy = "^0.991"
+pep8-naming = "^0.13.3"
+pre-commit = "^3.0.2"
+pre-commit-hooks = "^4.4.0"
 pytest = "^7.2.1"
-safety = "^2.3.5"
-mypy = "^1.0"
-typeguard = "^2.13.3"
-xdoctest = {extras = ["colors"], version = "^1.1.1"}
-sphinx-autobuild = "^2021.3.14"
-pre-commit = "^2.17.0"
-black = "^22.8"
-flake8 = "^5.0.4"
-flake8-bandit = "^4.1.1"
-flake8-bugbear = "^23.2.13"
-flake8-docstrings = "^1.7.0"
-flake8-rst-docstrings = "^0.3.0"
-pep8-naming = "^0.13.1"
-darglint = "^1.8.1"
-reorder-python-imports = "^3.9.0"
-pre-commit-hooks = "^4.1.0"
-faker = "^17.6.0"
-openpyxl = "^3.1.1"
-Sphinx = "^4.3.2"
-Pygments = "^2.14.0"
 pyupgrade = "^3.3.1"
-furo = ">=2021.11.12"
-
+safety = "^2.3.5"
+sphinx = "^5.0"
+sphinx-autobuild = "^2021.3.14"
+typeguard = "^2.13.3"
+xdoctest = {extras = ["colors"], version = ">=0.15.10"}
+myst-parser = "^0.18.1"
 
 [tool.poetry.scripts]
-# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
-jmbde = "jmbde.__main__:main"
+jmbde_python = "jmbde.__main__:main"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
+tests = ["tests", "*/tests"]
 
 [tool.coverage.run]
 branch = true
-source = ["jmbde"]
+source = ["jmbde", "tests"]
 
 [tool.coverage.report]
 show_missing = true
-fail_under = 12
+fail_under = 100
+
+[tool.isort]
+profile = "black"
+force_single_line = true
+lines_after_imports = 2
 
 [tool.mypy]
 strict = true
@@ -94,10 +75,6 @@ pretty = true
 show_column_numbers = true
 show_error_codes = true
 show_error_context = true
-
-[[tool.mypy.overrides]]
-module = "jmbde.gui.forms.*"
-ignore_missing_imports = true
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
