fix: Change the workflows to the main branch

--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -2,7 +2,7 @@ name: SonarCloud Analysis
 on:
   push:
     branches:
-      - Tkinter
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
 
