--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,14 @@
 ---
 name: Build
-
 on:
   push:
     branches:
-      - Tkinter
+      - main
     tags:
       - "*"
   pull_request:
     branches:
-      - Tkinter
-
+      - main
 jobs:
   build:
     name: Module Build
@@ -21,7 +19,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 2
-
       - name: "⚙️ Install Python"
         id: python
         uses: actions/setup-python@v4
@@ -30,22 +27,18 @@ jobs:
           # python-version-file: ".python-version"
           check-latest: true
           cache: pip
-
       - name: Upgrade pip
         run: |
           pip install --constraint=.github/workflows/constraints.txt pip
           pip --version
-
       - name: Install Poetry
         run: |
           pip install --constraint=.github/workflows/constraints.txt poetry
           poetry --version
-
       - name: Check if there is a parent commit
         id: check-parent-commit
         run: |
           echo "::set-output name=sha::$(git rev-parse --verify --quiet HEAD^)"
-
       - name: Detect and tag new version
         id: check-version
         if: steps.check-parent-commit.outputs.sha
@@ -53,24 +46,20 @@ jobs:
         with:
           version-command: |
             bash -o pipefail -c "poetry version | awk '{ print \$2 }'"
-
       - name: Bump version for developmental release
         if: "! steps.check-version.outputs.tag"
         run: |
           poetry version patch &&
           version=$(poetry version | awk '{ print $2 }') &&
           poetry version $version.dev.$(date +%s)
-
       - name: Build package
         run: |
           poetry build --ansi
-
       - name: Upload Package
         uses: actions/upload-artifact@v3
         with:
           name: PythonModule
           path: dist/
-
   tests:
     name: ${{ matrix.session }} ${{ matrix.python-version }} / ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -91,50 +80,41 @@ jobs:
           - { python-version: "3.11", os: ubuntu-latest, session: "typeguard" }
           - { python-version: "3.11", os: ubuntu-latest, session: "xdoctest" }
           - { python-version: "3.11", os: ubuntu-latest, session: "docs-build" }
-
     env:
       NOXSESSION: ${{ matrix.session }}
-
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3
-
       - name: "🐧 ⚙️ Install Linux dependencies"
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update && DEBIAN_FRONTEND=--noninteractive \
           sudo apt-get --no-install-recommends --assume-yes install \
             libegl1
-
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           cache: pip
-
       - name: Upgrade pip
         run: |
           pip install --constraint=.github/workflows/constraints.txt pip
           pip --version
-
       - name: Install Poetry
         if: runner.os == 'Linux' || runner.os == 'macOS'
         run: |
           pipx install --pip-args=--constraint=.github/workflows/constraints.txt poetry
           poetry --version
-
       - name: Install Poetry
         if: runner.os == 'Windows'
         uses: abatilo/actions-poetry@v2
         with:
           poetry-version: "1.3.2"
-
       - name: Install Nox
         run: |
           pipx install --pip-args=--constraint=.github/workflows/constraints.txt nox
           pipx inject --pip-args=--constraint=.github/workflows/constraints.txt nox nox-poetry
           nox --version
-
       - name: Compute pre-commit cache key
         if: matrix.session == 'pre-commit'
         id: pre-commit-cache
@@ -147,78 +127,66 @@ jobs:
           digest = hashlib.sha256(payload).hexdigest()
           result = "${{ runner.os }}-{}-{}-pre-commit".format(python, digest[:8])
           print("::set-output name=result::{}".format(result))
-
       - name: Restore pre-commit cache
         uses: actions/cache@v3
         if: matrix.session == 'pre-commit'
         with:
           path: ~/.cache/pre-commit
-          key: ${{ steps.pre-commit-cache.outputs.result }}-${{ hashFiles('.pre-commit-config.yaml') }}
+          key: ${{ steps.pre-commit-cache.outputs.result }}-${{ hashFiles('.pre-commit-config.yaml')
+            }}
           restore-keys: |
             ${{ steps.pre-commit-cache.outputs.result }}-
-
       - name: Run Nox
         run: |
           nox --force-color --python=${{ matrix.python-version }}
-
       - name: Upload coverage data
         if: always() && matrix.session == 'tests'
         uses: "actions/upload-artifact@v3"
         with:
           name: coverage-data
           path: ".coverage.*"
-
       - name: Upload documentation
         if: matrix.session == 'docs-build'
         uses: actions/upload-artifact@v3
         with:
           name: docs
           path: docs/_build
-
   coverage:
     runs-on: ubuntu-latest
     needs: tests
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3
-
       - name: "🐧 ⚙️ Install Linux dependencies"
         run: |
           sudo apt-get update && DEBIAN_FRONTEND=--noninteractive \
           sudo apt-get --no-install-recommends --assume-yes install \
             libegl1
-
       - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
-
       - name: Install Poetry
         run: |
           pipx install --pip-args=--constraint=.github/workflows/constraints.txt poetry
           poetry --version
-
       - name: Install Nox
         run: |
           pipx install --pip-args=--constraint=.github/workflows/constraints.txt nox
           pipx inject --pip-args=--constraint=.github/workflows/constraints.txt nox nox-poetry
           nox --version
-
       - name: Download coverage data
         uses: actions/download-artifact@v3
         with:
           name: coverage-data
-
       - name: Combine coverage data and display human readable report
         run: |
           nox --force-color --session=coverage
-
       - name: Create coverage report
         run: |
           nox --force-color --session=coverage -- xml
       - name: Upload coverage report
         uses: codecov/codecov-action@v3.1.1
-
   releaseNotes:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
@@ -232,7 +200,6 @@ jobs:
           tag: "${{ steps.check-version.outputs.tag }}"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-
   changeLog:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
@@ -242,7 +209,6 @@ jobs:
         uses: mikepenz/release-changelog-builder-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Create Release
         uses: actions/create-release@v1
         with:
@@ -251,7 +217,6 @@ jobs:
           body: ${{ steps.check-version.outputs }}
         env:
           GITHUB_TOKEN: $${{ secrets.GITHUB_TOKEN }}
-
   deployPrereleases:
     name: Deploy Pre-Release
     if: github.ref == 'refs/heads/master'
@@ -266,7 +231,6 @@ jobs:
         with:
           name: PythonModule
           path: dist/
-
       - name: Publish package on TestPyPI
         if: "! steps.check-version.outputs.tag"
         uses: pypa/gh-action-pypi-publish@v1.6.4
@@ -274,7 +238,6 @@ jobs:
           user: __token__
           password: "${{ secrets.TEST_PYPI_TOKEN }}"
           repository_url: https://test.pypi.org/legacy/
-
   deploy:
     name: Deploy Release on PyPi
     if: startsWith(github.ref, 'refs/tags/')
@@ -291,7 +254,6 @@ jobs:
         with:
           name: PythonModule
           path: dist/
-
       - name: Publish package on PyPI
         if: steps.check-version.outputs.tag
         uses: pypa/gh-action-pypi-publish@v1.6.4
