--- a/.github/workflows/devskim-analysis.yml
+++ b/.github/workflows/devskim-analysis.yml
@@ -10,7 +10,7 @@ name: "DevSkim"
 on:
   # yamllint enable
   push:
-    branches: [Tkinter]
+    branches: [main]
 
   pull_request:
     # The branches below must be a subset of the branches above
